
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct thread {TYPE_2__* td_proc; scalar_t__ td_critnest; } ;
struct TYPE_4__ {TYPE_1__* p_ucred; } ;
struct TYPE_3__ {int * cr_prison; scalar_t__ cr_uid; } ;


 int gotroot ;

__attribute__((used)) static void kernel_code(void) {
 struct thread *thread;

 asm(
  "movl %%fs:0, %0"
  : "=r"(thread)
 );






 thread->td_critnest = 0;
 thread->td_proc->p_ucred->cr_uid = 0;
 thread->td_proc->p_ucred->cr_prison = ((void*)0);
 gotroot = 1;

 return;
}
